--- a/[source]/готовые статьи/helper-project.json
+++ b/[source]/готовые статьи/helper-project.json
@@ -1,5 +1,16 @@
 {
-	"project":
+	"project-html":
+	{
+		"export_folder": "..\\..\\articles",
+		"source_folder": "..\\..\\\\[source]\\готовые статьи",
+		"cross-link": "https://aleksversus.github.io/howdo_faq/articles/"
+	},
+	"head": "..\\..\\[source]\\готовые статьи\\add\\02_start.html",
+	"foot": "..\\..\\[source]\\готовые статьи\\add\\03_end.html",
+	"head_contents": "..\\..\\[source]\\готовые статьи\\00_soderzhanie_0000.txt-light",
+
+
+	"project-fb2":
 	{
 		"export_file":"..\\release\\FAQ.QSP.%TIME%.fb2",
 		"folder":"."
