--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,21 @@
 *.sublime-project
 */__pycache__/
 /**/__pycache__
+
+# Production
+/build
+
+# Generated files
+.docusaurus
+.cache-loader
+
+# Misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
